--- a/about.html
+++ b/about.html
@@ -135,6 +135,14 @@
 <section class="container pad-intro pad-bottom">
   <div class="extrapadding">
 <!-- ABOUT TEXT -->
+
+        <div class="row">
+
+<iframe style="border:none;" width="100%" height="590" src="https://www.are.na/t/playhouse-memery/embed" title="Playhouse Memery”"></iframe>
+
+</div>
+
+
         <div class="row">
 
           <div class="col-md-6"><img id="teah" src="images/about/me2.jpg" class="leanright imgshadow aboutpic"/>
