--- a/work.html
+++ b/work.html
@@ -98,6 +98,40 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
  
 <section>
+      
+
+        <div class="newborder container">
+          
+         <section id="works-container" class="works-container works-masonry-container clearfix works-thumbnails-view pad-top-quarter pad-bottom-quarter">
+
+          <!--FILTERS -->
+        <section id="works-filter-panel" class="works-filter-panel imgborder">
+          <div class="valign">
+                <div class="works-filter-wrap">
+                    <ul class="works-filter text-center clearfix font2">
+
+                        <li><a id="all" href="#" data-filter="*" class="active"><span>All</span></a></li>
+
+                        <li><a href="#" data-filter=".product"><span class="green">Product</span></a></li>
+                        <!--GREEN -->
+
+                        <li><a href="#" data-filter=".ui"><span class="blinkblue">Interface</span></a></li>
+                        <!--BLUE -->
+
+                        <li><a href="#" data-filter=".space"><span class="red">Space</span></a></li>
+                        <!--RED -->
+
+                        <li><a href="#" data-filter=".service"><span class="orange">Service</span></a></li>
+                        <!--ORANGE -->
+
+                    </ul>
+                </div>
+          </div>
+        </section> 
+        <!-- -->
+
+
+<section>
   <div id="hidden-images">
     <img onmouseover="hideElement('bloom')" hidden id="bloom" alt="" class="b-lazy leanright imgshadow supercede" src="images/imgloader.gif" data-src="images/work/bloom.jpeg" data-src-small="images/about_sm.jpg"/>
 
@@ -143,23 +177,23 @@
               <article class="col-md-10 about bigletters">
                 <div class="menu menu--tsula">
 
-                  <a onmouseover="showElement('bloom')" onmouseout="hideElement('bloom')" class="menu__item font1" href="dialupstore.html">
+                  <a onmouseover="showElement('bloom')" onmouseout="hideElement('bloom')" class="menu__item font1 product ui" href="dialupstore.html">
                     <span class="menu__item-name">"Don't flush your toilet when it rains."</span>
                   </a>
 
-                  <a onmouseover="showElement('jpb')" onmouseout="hideElement('jpb')" class="menu__item font1" href="dialupstore.html">
+                  <a onmouseover="showElement('jpb')" onmouseout="hideElement('jpb')" class="menu__item font1 space service" href="dialupstore.html">
                     <span class="menu__item-name">"It is a poem in glass and marble which symbolizes...that we shall indeed overcome."</span>
                   </a>
 
-                  <a onmouseover="showElement('lighthouse')" onmouseout="hideElement('lighthouse')" class="menu__item font1" href="dialupstore.html">
+                  <a onmouseover="showElement('lighthouse')" onmouseout="hideElement('lighthouse')" class="menu__item font1 product space" href="dialupstore.html">
                     <span class="menu__item-name">"Lighthouses are where they are because they need to be where they are."</span>
                   </a>
 
-                 <a onmouseover="showElement('tenderheaded')" onmouseout="hideElement('tenderheaded')" class="menu__item font1" href="dialupstore.html">
+                 <a onmouseover="showElement('tenderheaded')" onmouseout="hideElement('tenderheaded')" class="menu__item font1 ui service" href="dialupstore.html">
                     <span class="menu__item-name">"If you are a Black woman, hair is serious business."</span>
                   </a>
 
-                  <a onmouseover="showElement('ficareto')" onmouseout="hideElement('ficareto')" class="menu__item font1" href="dialupstore.html">
+                  <a onmouseover="showElement('ficareto')" onmouseout="hideElement('ficareto')" class="menu__item font1 service" href="dialupstore.html">
                     <span class="menu__item-name">"There is no address - only coordinates."</span>
                   </a>
 
