--- a/work.html
+++ b/work.html
@@ -96,19 +96,13 @@
 
   <!-- MASTER CONTENT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
- 
-<section>
-      
 
-        <div class="newborder container">
-          
-         <section id="works-container" class="works-container works-masonry-container clearfix works-thumbnails-view pad-top-quarter pad-bottom-quarter">
 
           <!--FILTERS -->
-        <section id="works-filter-panel" class="works-filter-panel imgborder">
+        <section id="works-filter-panel" class="works-filter-panel ">
           <div class="valign">
                 <div class="works-filter-wrap">
-                    <ul class="works-filter text-center clearfix font2">
+                    <ul class="works-filter text-center">
 
                         <li><a id="all" href="#" data-filter="*" class="active"><span>All</span></a></li>
 
@@ -177,7 +171,7 @@
               <article class="col-md-10 about bigletters">
                 <div class="menu menu--tsula">
 
-                  <a onmouseover="showElement('bloom')" onmouseout="hideElement('bloom')" class="menu__item font1 product ui" href="dialupstore.html">
+                  <a onmouseover="showElement('bloom')" onmouseout="hideElement('bloom')" class="menu__item font1" href="dialupstore.html">
                     <span class="menu__item-name">"Don't flush your toilet when it rains."</span>
                   </a>
 
