--- a/dialupstore2.html
+++ b/dialupstore2.html
@@ -181,7 +181,7 @@
 
 
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-one-half zoom">
                       <img data-no-retina alt="lake n bus stop design main" title="" class="b-lazy img-responsive" src="images/work/store/store1.png"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/store1.png">
                         <div class="ContentB">
@@ -192,7 +192,7 @@
 <!-- end : works-item -->
 
 <!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-full-width">
+              <div class="works-item chrome-fix works-item-one-half">
                     <article class="text-center worktext">
                           <h2 class="font1 bigletters add-bottom-eighth">DIAL UP Store</h2>
                           <h4 class="font2">Web Design & Development</h4><br/>
@@ -202,16 +202,8 @@
 <!-- end : works-item -->
 
 
-<!-- TEXT : works-item -->
-              <div onmouseover="showElement('cuttingmat')" onmouseout="hideElement('cuttingmat')" class="works-item chrome-fix works-item-full-width">
-                        <article class="text-left  worktext">
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem et tortor consequat id porta nibh venenatis. Adipiscing tristique risus nec feugiat in. Habitant morbi tristique senectus et netus. Lacinia quis vel eros donec ac odio. Purus ut faucibus pulvinar elementum integer enim neque. Tortor condimentum lacinia quis vel eros donec ac odio. Amet purus gravida quis blandit turpis cursus in. Praesent elementum facilisis leo vel fringilla. <a href="http://www.dialupstuff.com/blah" target="_blank">Visit the store.</a> Fames ac turpis egestas integer eget aliquet nibh. Non enim praesent elementum facilisis leo. Volutpat blandit aliquam etiam erat. Ac tortor dignissim convallis aenean et tortor.</p>
-                    </article>
-              </div>
-<!-- end : works-item -->
-
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-one-half zoom">
                       <img data-no-retina alt="lake n bus stop design main 2" title="" class="b-lazy img-responsive" src="images/work/store/store2.png"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/store2.png">
                         <div class="ContentB">
@@ -220,9 +212,16 @@
               </div>
 <!-- end : works-item -->
 
+ <!-- TEXT : works-item -->
+              <div onmouseover="showElement('cuttingmat')" onmouseout="hideElement('cuttingmat')" class="works-item chrome-fix works-item-one-half">
+                        <article class="text-left  worktext">
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem et tortor consequat id porta nibh venenatis. Adipiscing tristique risus nec feugiat in. Habitant morbi tristique senectus et netus. Lacinia quis vel eros donec ac odio. Purus ut faucibus pulvinar elementum integer enim neque. Tortor condimentum lacinia quis vel eros donec ac odio. Amet purus gravida quis blandit turpis cursus in. Praesent elementum facilisis leo vel fringilla. <a href="http://www.dialupstuff.com/blah" target="_blank">Visit the store.</a> Fames ac turpis egestas integer eget aliquet nibh. Non enim praesent elementum facilisis leo. Volutpat blandit aliquam etiam erat. Ac tortor dignissim convallis aenean et tortor.</p>
+                    </article>
+              </div>
+<!-- end : works-item -->
 
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-one-half zoom">
                       <img data-no-retina alt="lake n bus stop design notes" title="" class="b-lazy img-responsive" src="images/work/store/store3.png"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/store3.png">
                         <div class="ContentB">
@@ -233,7 +232,7 @@
 
 
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-one-half zoom">
                       <img data-no-retina alt="lake n bus stop design notes" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/jack2.jpg"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/jack2.jpg">
                         <div class="ContentB">
@@ -243,7 +242,7 @@
 <!-- end : works-item -->
 
 <!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-full-width">
+              <div class="works-item chrome-fix works-item-one-half">
               <article class="text-center bigletters">
               <h1>"It is a poem in glass and marble which symbolizes...that we shall indeed overcome."</h1>
             </article>
@@ -252,7 +251,7 @@
 
 
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-one-half zoom">
                       <img data-no-retina alt="lake n bus stop design moodboard" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/jack.jpg"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/jack.jpg">
                           <div class="ContentB">
@@ -262,7 +261,7 @@
 <!-- end : works-item -->
 
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-one-half zoom">
                       <img data-no-retina alt="lake n bus stop design moodboard 2" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/teah.jpg"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/teah.jpg">
                           <div class="ContentB">
@@ -272,7 +271,7 @@
 <!-- end : works-item -->
 
 <!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-full-width">
+              <div class="works-item chrome-fix works-item-one-half">
                         <article class="text-left  worktext pad-top-half pad-bottom-half">
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem et tortor consequat id porta nibh venenatis. Amet purus gravida quis blandit turpis cursus in. Praesent elementum facilisis leo vel fringilla. Fames ac turpis egestas integer eget aliquet nibh. Ac tortor dignissim convallis aenean et tortor.</p>
                     </article>
@@ -280,7 +279,7 @@
 <!-- end : works-item -->
 
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-one-half zoom">
                       <img data-no-retina alt="lake n bus stop design early sketches" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/dave.jpg"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/dave.jpg">
                           <div class="ContentB">
@@ -290,7 +289,7 @@
 <!-- end : works-item -->
 
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-one-half zoom">
                       <img data-no-retina alt="lake n bus stop design early sketches" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/aj.jpg"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/aj.jpg">
                           <div class="ContentB">
@@ -300,7 +299,7 @@
 <!-- end : works-item -->
 
 <!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-full-width">
+              <div class="works-item chrome-fix works-item-one-half">
                         <article class="text-left  worktext">
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem et tortor consequat id porta nibh venenatis. Amet purus gravida quis.</p>
                     </article>
@@ -308,7 +307,7 @@
 <!-- end : works-item -->
 
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-one-half zoom">
                       <img data-no-retina alt="lake n bus stop design early sketches" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/pinktee.jpg"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/pinktee.jpg">
                           <div class="ContentB">
@@ -319,7 +318,7 @@
 
 
 <!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-full-width">
+              <div class="works-item chrome-fix works-item-one-half">
                     <article class="text-center seealso imgborder">
                           <h2 class="font1 bigletters"><a href="work.html">see also: august</a></h2><br/>
                           <h4 class="font2">A music video</h4>
@@ -328,7 +327,7 @@
 <!-- end : works-item -->
 
 <!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-full-width">
+              <div class="works-item chrome-fix works-item-one-half">
                     <article class="text-center seealso imgborder">
                           <h2 class="font1 bigletters"><a href="work.html">see also: bloom</a></h2><br/>
                           <h4 class="font2">An environment</h4>
