--- a/dialupstore2.html
+++ b/dialupstore2.html
@@ -129,16 +129,16 @@
 
                         <li><a id="all" href="#" data-filter="*" class="active"><span>All</span></a></li>
 
-                        <li><a href="#" data-filter=".product"><span class="green">Product</span></a></li>
+                        <li><a href="#" data-filter=".product"><span>Product</span></a></li>
                         <!--GREEN -->
 
-                        <li><a href="#" data-filter=".ui"><span class="blinkblue">Interface</span></a></li>
+                        <li><a href="#" data-filter=".ui"><span>Interface</span></a></li>
                         <!--BLUE -->
 
-                        <li><a href="#" data-filter=".space"><span class="red">Space</span></a></li>
+                        <li><a href="#" data-filter=".space"><span>Space</span></a></li>
                         <!--RED -->
 
-                        <li><a href="#" data-filter=".service"><span class="orange">Service</span></a></li>
+                        <li><a href="#" data-filter=".service"><span>Service</span></a></li>
                         <!--ORANGE -->
 
                     </ul>
