--- a/dialupstore.html
+++ b/dialupstore.html
@@ -83,16 +83,32 @@
  <!-- Header
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <header class="masthead headerborder hint-bg">
-    <div class="valign">
-        <div class="container-fluid">
-            <div class="row">
-              <div class="col-md-12 text-left menupad">
-                <a href="about.html">teah</a>
-                <a href="work.html">work</a>
-              </div>
-            </div>
-        </div>
-    </div>
+
+                  <!--FILTERS -->
+        <section id="works-filter-panel" class="works-filter-panel">
+          <div class="valign">
+                <div class="works-filter-wrap">
+                    <ul class="works-filter text-center clearfix font2">
+
+                        <li><a id="all" href="#" data-filter="*" class="active"><span>All</span></a></li>
+
+                        <li><a href="#" data-filter=".product"><span>Product</span></a></li>
+                        <!--GREEN -->
+
+                        <li><a href="#" data-filter=".ui"><span>Interface</span></a></li>
+                        <!--BLUE -->
+
+                        <li><a href="#" data-filter=".space"><span>Space</span></a></li>
+                        <!--RED -->
+
+                        <li><a href="#" data-filter=".service"><span>Service</span></a></li>
+                        <!--ORANGE -->
+
+                    </ul>
+                </div>
+          </div>
+        </section> 
+        <!-- -->
   </header>
 
 
@@ -121,31 +137,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
 
-          <!--FILTERS -->
-        <section id="works-filter-panel" class="works-filter-panel">
-          <div class="valign">
-                <div class="works-filter-wrap">
-                    <ul class="works-filter text-center clearfix font2">
 
-                        <li><a id="all" href="#" data-filter="*" class="active"><span>All</span></a></li>
-
-                        <li><a href="#" data-filter=".product"><span class="green">Product</span></a></li>
-                        <!--GREEN -->
-
-                        <li><a href="#" data-filter=".ui"><span class="blinkblue">Interface</span></a></li>
-                        <!--BLUE -->
-
-                        <li><a href="#" data-filter=".space"><span class="red">Space</span></a></li>
-                        <!--RED -->
-
-                        <li><a href="#" data-filter=".service"><span class="orange">Service</span></a></li>
-                        <!--ORANGE -->
-
-                    </ul>
-                </div>
-          </div>
-        </section> 
-        <!-- -->
 
 <section>
   <div id="hidden-images">
@@ -354,12 +346,14 @@
     <div class="valign">
         <div class="container-fluid">
             <div class="row">
-              <div class="col-md-12 text-right">
-                <a class="eyecursor" href="/"><img class="homeface imgborder" data-no-retina alt=" " title="" src="images/teah/comictslow.gif"/></a>
+              <div class="col-md-12 text-left menupad">
+                <a href="about.html">teah</a>
+                <a href="work.html">work</a>
               </div>
             </div>
         </div>
     </div>
+
 </footer>
 
 
