--- a/dialupstore.html
+++ b/dialupstore.html
@@ -82,7 +82,7 @@
 
  <!-- Header
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <header class="masthead headerborder hint-bg">
+  <header class="masthead headerborder">
 
                   <!--FILTERS -->
         <section id="works-filter-panel" class="works-filter-panel">
@@ -173,7 +173,7 @@
 
 
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item chrome-fix works-item-full-width ">
                       <img data-no-retina alt="lake n bus stop design main" title="" class="b-lazy img-responsive" src="images/work/store/store1.png"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/store1.png">
                         <div class="ContentB">
@@ -203,7 +203,7 @@
 <!-- end : works-item -->
 
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item chrome-fix works-item-full-width">
                       <img data-no-retina alt="lake n bus stop design main 2" title="" class="b-lazy img-responsive" src="images/work/store/store2.png"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/store2.png">
                         <div class="ContentB">
@@ -214,7 +214,7 @@
 
 
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item chrome-fix works-item-full-width ">
                       <img data-no-retina alt="lake n bus stop design notes" title="" class="b-lazy img-responsive" src="images/work/store/store3.png"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/store3.png">
                         <div class="ContentB">
@@ -225,7 +225,7 @@
 
 
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item chrome-fix works-item-full-width ">
                       <img data-no-retina alt="lake n bus stop design notes" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/jack2.jpg"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/jack2.jpg">
                         <div class="ContentB">
@@ -244,7 +244,7 @@
 
 
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item chrome-fix works-item-full-width ">
                       <img data-no-retina alt="lake n bus stop design moodboard" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/jack.jpg"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/jack.jpg">
                           <div class="ContentB">
@@ -254,7 +254,7 @@
 <!-- end : works-item -->
 
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item chrome-fix works-item-full-width ">
                       <img data-no-retina alt="lake n bus stop design moodboard 2" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/teah.jpg"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/teah.jpg">
                           <div class="ContentB">
@@ -272,7 +272,7 @@
 <!-- end : works-item -->
 
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item chrome-fix works-item-full-width ">
                       <img data-no-retina alt="lake n bus stop design early sketches" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/dave.jpg"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/dave.jpg">
                           <div class="ContentB">
@@ -282,7 +282,7 @@
 <!-- end : works-item -->
 
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item chrome-fix works-item-full-width ">
                       <img data-no-retina alt="lake n bus stop design early sketches" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/aj.jpg"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/aj.jpg">
                           <div class="ContentB">
@@ -300,7 +300,7 @@
 <!-- end : works-item -->
 
 <!-- IMG : works-item -->
-              <div class="works-item ImageWrapper ContentWrapperB chrome-fix works-item-full-width zoom">
+              <div class="works-item chrome-fix works-item-full-width ">
                       <img data-no-retina alt="lake n bus stop design early sketches" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/pinktee.jpg"/>
                       <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/pinktee.jpg">
                           <div class="ContentB">
@@ -348,6 +348,8 @@
             <div class="row">
               <div class="col-md-12 text-left menupad">
                 <a href="about.html">teah</a>
+              </div>
+              <div class="col-md-12 text-right menupad">
                 <a href="work.html">work</a>
               </div>
             </div>
