Less File Fixes

--- a/dialupstore.html
+++ b/dialupstore.html
@@ -378,7 +378,9 @@
 
 <script src="javascripts/custom/main.js"></script>
 
-<script type="text/javascript">
+<script src="javascripts/blazy.js"></script>
+
+  <script type="text/javascript">
     imagehere = true;
 
     function showElement(id) {
