Less Fixes & Add'l Fixes

--- a/dialupstore.html
+++ b/dialupstore.html
@@ -30,9 +30,10 @@
    <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <link rel="preconnect" href="https://fonts.gstatic.com">
-<!--<link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&display=swap" rel="stylesheet">-->
+
 <link rel="stylesheet" href="https://use.typekit.net/alw6zrq.css">
 <link rel="stylesheet" href="stylesheets/MyFontsWebfontsKit.css">
+<link rel="stylesheet" href="https://use.typekit.net/msv1dbc.css">
 
 <!-- ICONS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -346,11 +347,8 @@
     <div class="valign">
         <div class="container-fluid">
             <div class="row">
-              <div class="col-md-12 text-left menupad">
-                <a href="about.html">teah</a>
-              </div>
-              <div class="col-md-12 text-right menupad">
-                <a href="work.html">work</a>
+                <a href="about.html" class="text-left menupad">teah</a>
+                <a href="work.html" class="text-right menupad">work</a>
               </div>
             </div>
         </div>
