--- a/recipe-x.html
+++ b/recipe-x.html
@@ -85,6 +85,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <header class="masthead headerborder">
 
+
+
                   <!--FILTERS -->
         <section id="works-filter-panel" class="works-filter-panel">
           <div class="valign">
@@ -347,8 +349,9 @@
     <div class="valign">
         <div class="container-fluid">
             <div class="row">
-                <a href="about.html" class="text-left menupad">teah</a>
-                <a href="work.html" class="text-right menupad">work</a>
+                <a href="recipes.html" class="text-left menupad">cook me</a>
+                <a href="more.html" class="text-center menupad">file me</a>
+                <a href="about.html" class="text-right menupad">read me</a>
               </div>
             </div>
         </div>
