--- a/about.html
+++ b/about.html
@@ -172,7 +172,7 @@
 <section>
   <div class="projectpage">          
     <div class="newborder container">
-      <section id="works-container" class="works-container works-masonry-container clearfix works-thumbnails-view pad-top-quarter">
+      <section id="works-container" class="works-container works-masonry-container clearfix works-thumbnails-view pad-intro">
 
 
 <!-- TEXT : works-item -->
@@ -196,7 +196,7 @@
     <div class="valign">
         <div class="container-fluid">
             <div class="row">
-                <a href="recipes.html" class="text-left menupad">cook me</a>
+                <a href="index.html" class="text-left menupad">cook me</a>
                 <a href="more.html" class="text-center menupad">file me</a>
                 <a href="about.html" class="text-right menupad">read me</a>
               </div>
