--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 
 <link rel="stylesheet" href="https://use.typekit.net/alw6zrq.css">
-<link rel="stylesheet" href="stylesheets/MyFontsWebfontsKit.css">
+<link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://use.typekit.net/msv1dbc.css">
 
 <!-- ICONS
@@ -77,33 +77,15 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <header class="masthead headerborder">
 
-
-
-                  <!--FILTERS -->
-        <section id="works-filter-panel" class="works-filter-panel">
-          <div class="valign">
-                <div class="works-filter-wrap">
-                    <ul class="works-filter text-center clearfix font2">
-
-                        <li><a id="all" href="#" data-filter="*" class="active"><span>All</span></a></li>
-
-                        <li><a href="#" data-filter=".product"><span>Product</span></a></li>
-                        <!--GREEN -->
-
-                        <li><a href="#" data-filter=".ui"><span>Interface</span></a></li>
-                        <!--BLUE -->
-
-                        <li><a href="#" data-filter=".space"><span>Space</span></a></li>
-                        <!--RED -->
-
-                        <li><a href="#" data-filter=".service"><span>Service</span></a></li>
-                        <!--ORANGE -->
-
-                    </ul>
-                </div>
-          </div>
-        </section> 
-        <!-- -->
+    <div class="valign">
+        <div class="container-fluid">
+            <div class="row">
+                <a href="index.html" class="text-left menupad">eat me</a>
+                <a href="more.html" class="text-center menupad">add me</a>
+                <a href="about.html" class="text-right menupad">read me</a>
+            </div>   
+        </div>
+    </div>
   </header>
 
 
@@ -167,161 +149,38 @@
       <section id="works-container" class="works-container works-masonry-container clearfix works-thumbnails-view pad-top-quarter">
 
 
-<!-- IMG : works-item -->
-              <div class="works-item chrome-fix works-item-one-half ">
-                      <img data-no-retina alt="lake n bus stop design main" title="" class="b-lazy img-responsive" src="images/work/store/store1.png"/>
-                      <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/store1.png">
-                        <div class="ContentB">
-                          </div>
-                      </a>
-
+<!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half">
+                    <article class="text-center worktext">
+                          <a href="recipe-x.html" onmouseover="showElement('cuttingmat')" onmouseout="hideElement('cuttingmat')">spinach-ricotta ravioli</a>
+                    </article>                    
               </div>
 <!-- end : works-item -->
 
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half">
                     <article class="text-center worktext">
-                          <h2 class="font1 bigletters add-bottom-eighth">DIAL UP Store</h2>
-                          <h4 class="font2">Web Design & Development</h4><br/>
-                          <h4 class="font1">2018</h4>
+                          <a href="recipe-x.html" onmouseover="showElement('cuttingmat')" onmouseout="hideElement('cuttingmat')">spinach-ricotta ravioli</a>
                     </article>                    
               </div>
 <!-- end : works-item -->
 
-
 <!-- TEXT : works-item -->
-              <div onmouseover="showElement('cuttingmat')" onmouseout="hideElement('cuttingmat')" class="works-item chrome-fix works-item-one-half">
-                        <article class="text-left  worktext">
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem et tortor consequat id porta nibh venenatis. Adipiscing tristique risus nec feugiat in. Habitant morbi tristique senectus et netus. Lacinia quis vel eros donec ac odio. Purus ut faucibus pulvinar elementum integer enim neque. Tortor condimentum lacinia quis vel eros donec ac odio. Amet purus gravida quis blandit turpis cursus in. Praesent elementum facilisis leo vel fringilla. <a href="http://www.dialupstuff.com/blah" target="_blank">Visit the store.</a> Fames ac turpis egestas integer eget aliquet nibh. Non enim praesent elementum facilisis leo. Volutpat blandit aliquam etiam erat. Ac tortor dignissim convallis aenean et tortor.</p>
-                    </article>
-              </div>
-<!-- end : works-item -->
-
-<!-- IMG : works-item -->
               <div class="works-item chrome-fix works-item-one-half">
-                      <img data-no-retina alt="lake n bus stop design main 2" title="" class="b-lazy img-responsive" src="images/work/store/store2.png"/>
-                      <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/store2.png">
-                        <div class="ContentB">
-                          </div>
-                      </a>                      
-              </div>
-<!-- end : works-item -->
-
-
-<!-- IMG : works-item -->
-              <div class="works-item chrome-fix works-item-one-half ">
-                      <img data-no-retina alt="lake n bus stop design notes" title="" class="b-lazy img-responsive" src="images/work/store/store3.png"/>
-                      <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/store3.png">
-                        <div class="ContentB">
-                          </div>
-                      </a>
-              </div>
-<!-- end : works-item -->
-
-
-<!-- IMG : works-item -->
-              <div class="works-item chrome-fix works-item-one-half ">
-                      <img data-no-retina alt="lake n bus stop design notes" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/jack2.jpg"/>
-                      <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/jack2.jpg">
-                        <div class="ContentB">
-                        </div>
-                      </a>
+                    <article class="text-center worktext">
+                          <a href="recipe-x.html" onmouseover="showElement('cuttingmat')" onmouseout="hideElement('cuttingmat')">spinach-ricotta ravioli</a>
+                    </article>                    
               </div>
 <!-- end : works-item -->
 
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half">
-              <article class="text-center bigletters">
-              <h1>"It is a poem in glass and marble which symbolizes...that we shall indeed overcome."</h1>
-            </article>
+                    <article class="text-center worktext">
+                          <a href="recipe-x.html" onmouseover="showElement('cuttingmat')" onmouseout="hideElement('cuttingmat')">spinach-ricotta ravioli</a>
+                    </article>                    
               </div>
 <!-- end : works-item -->
 
-
-<!-- IMG : works-item -->
-              <div class="works-item chrome-fix works-item-one-half ">
-                      <img data-no-retina alt="lake n bus stop design moodboard" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/jack.jpg"/>
-                      <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/jack.jpg">
-                          <div class="ContentB">
-                          </div>
-                      </a>
-              </div>
-<!-- end : works-item -->
-
-<!-- IMG : works-item -->
-              <div class="works-item chrome-fix works-item-one-half ">
-                      <img data-no-retina alt="lake n bus stop design moodboard 2" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/teah.jpg"/>
-                      <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/teah.jpg">
-                          <div class="ContentB">
-                          </div>
-                      </a>
-              </div>
-<!-- end : works-item -->
-
-<!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-one-half">
-                        <article class="text-left  worktext pad-top-half pad-bottom-half">
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem et tortor consequat id porta nibh venenatis. Amet purus gravida quis blandit turpis cursus in. Praesent elementum facilisis leo vel fringilla. Fames ac turpis egestas integer eget aliquet nibh. Ac tortor dignissim convallis aenean et tortor.</p>
-                    </article>
-              </div>
-<!-- end : works-item -->
-
-<!-- IMG : works-item -->
-              <div class="works-item chrome-fix works-item-one-half ">
-                      <img data-no-retina alt="lake n bus stop design early sketches" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/dave.jpg"/>
-                      <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/dave.jpg">
-                          <div class="ContentB">
-                          </div>
-                      </a>
-              </div>
-<!-- end : works-item -->
-
-<!-- IMG : works-item -->
-              <div class="works-item chrome-fix works-item-one-half ">
-                      <img data-no-retina alt="lake n bus stop design early sketches" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/aj.jpg"/>
-                      <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/aj.jpg">
-                          <div class="ContentB">
-                          </div>
-                      </a>
-              </div>
-<!-- end : works-item -->
-
-<!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-one-half">
-                        <article class="text-left  worktext">
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem et tortor consequat id porta nibh venenatis. Amet purus gravida quis.</p>
-                    </article>
-              </div>
-<!-- end : works-item -->
-
-<!-- IMG : works-item -->
-              <div class="works-item chrome-fix works-item-one-half ">
-                      <img data-no-retina alt="lake n bus stop design early sketches" title="" class="b-lazy img-responsive imgshadow" src="images/work/store/pinktee.jpg"/>
-                      <a  class="venobox" data-gall="portfolio-gallery" href="images/work/store/pinktee.jpg">
-                          <div class="ContentB">
-                          </div>
-                      </a>
-              </div>
-<!-- end : works-item -->
-
-
-<!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-one-half">
-                    <article class="text-center seealso imgborder">
-                          <h2 class="font1 bigletters"><a href="work.html">see also: august</a></h2><br/>
-                          <h4 class="font2">A music video</h4>
-                    </article>
-              </div>
-<!-- end : works-item -->
-
-<!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-one-half">
-                    <article class="text-center seealso imgborder">
-                          <h2 class="font1 bigletters"><a href="work.html">see also: bloom</a></h2><br/>
-                          <h4 class="font2">An environment</h4>
-                    </article>
-              </div>
-<!-- end : works-item -->
 
 
 
@@ -338,14 +197,38 @@
   <!-- FOOTER
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <footer class="mastfoot footerborder">
+ 
+                   <!--FILTERS -->
+        <section id="works-filter-panel" class="works-filter-panel">
+          <div class="valign">
+                <div class="works-filter-wrap">
+                    <ul class="works-filter text-center clearfix font2">
+
+                        <li><a id="all" href="#" data-filter="*" class="active"><span>All</span></a></li>
+
+                        <li><a href="#" data-filter=".product"><span>Product</span></a></li>
+                        <!--GREEN -->
+
+                        <li><a href="#" data-filter=".ui"><span>Interface</span></a></li>
+                        <!--BLUE -->
+
+                        <li><a href="#" data-filter=".space"><span>Space</span></a></li>
+                        <!--RED -->
+
+                        <li><a href="#" data-filter=".service"><span>Service</span></a></li>
+                        <!--ORANGE -->
+
+                    </ul>
+                </div>
+          </div>
+        </section> 
+        <!-- -->
+
     <div class="valign">
         <div class="container-fluid">
             <div class="row">
-                <a href="recipes.html" class="text-left menupad">cook me</a>
-                <a href="more.html" class="text-center menupad">file me</a>
-                <a href="about.html" class="text-right menupad">read me</a>
-              </div>
-            </div>
+                <h2 class="text-center">spurge eats</h2>
+            </div>    
         </div>
     </div>
 
