--- a/more.html
+++ b/more.html
@@ -140,7 +140,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
 <section class="container pad-intro pad-bottom">
-  <div class="extrapadding">
+  <div class="">
 <!-- ABOUT TEXT -->
 
         <div class="row">
@@ -161,7 +161,7 @@
     <div class="valign">
         <div class="container-fluid">
             <div class="row">
-                <a href="recipes.html" class="text-left menupad">cook me</a>
+                <a href="index.html" class="text-left menupad">cook me</a>
                 <a href="more.html" class="text-center menupad">file me</a>
                 <a href="about.html" class="text-right menupad">read me</a>
               </div>
