--- a/recipe-x.html
+++ b/recipe-x.html
@@ -85,33 +85,15 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <header class="masthead headerborder">
 
-
-
-                  <!--FILTERS -->
-        <section id="works-filter-panel" class="works-filter-panel">
-          <div class="valign">
-                <div class="works-filter-wrap">
-                    <ul class="works-filter text-center clearfix font2">
-
-                        <li><a id="all" href="#" data-filter="*" class="active"><span>All</span></a></li>
-
-                        <li><a href="#" data-filter=".product"><span>Product</span></a></li>
-                        <!--GREEN -->
-
-                        <li><a href="#" data-filter=".ui"><span>Interface</span></a></li>
-                        <!--BLUE -->
-
-                        <li><a href="#" data-filter=".space"><span>Space</span></a></li>
-                        <!--RED -->
-
-                        <li><a href="#" data-filter=".service"><span>Service</span></a></li>
-                        <!--ORANGE -->
-
-                    </ul>
-                </div>
-          </div>
-        </section> 
-        <!-- -->
+    <div class="valign">
+        <div class="container-fluid">
+            <div class="row">
+                <a href="index.html" class="text-left menupad">eat me</a>
+                <a href="more.html" class="text-center menupad">add me</a>
+                <a href="about.html" class="text-right menupad">read me</a>
+            </div>   
+        </div>
+    </div>
   </header>
 
 
@@ -316,7 +298,7 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-full-width">
                     <article class="text-center seealso imgborder">
-                          <h2 class="font1 bigletters"><a href="work.html">see also: august</a></h2><br/>
+                          <h2 class="font1 bigletters"><a href="work.html">you might like: spurge's beans</a></h2><br/>
                           <h4 class="font2">A music video</h4>
                     </article>
               </div>
@@ -325,7 +307,7 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-full-width">
                     <article class="text-center seealso imgborder">
-                          <h2 class="font1 bigletters"><a href="work.html">see also: bloom</a></h2><br/>
+                          <h2 class="font1 bigletters"><a href="work.html">you might like: oven chicken</a></h2><br/>
                           <h4 class="font2">An environment</h4>
                     </article>
               </div>
@@ -346,15 +328,13 @@
   <!-- FOOTER
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <footer class="mastfoot footerborder">
+
     <div class="valign">
         <div class="container-fluid">
             <div class="row">
-                <a href="recipes.html" class="text-left menupad">cook me</a>
-                <a href="more.html" class="text-center menupad">file me</a>
-                <a href="about.html" class="text-right menupad">read me</a>
-              </div>
-            </div>
-        </div>
+                <h2 class="text-center">spurge eats</h2>
+            </div>    
+        </div>   
     </div>
 
 </footer>
