--- a/more.html
+++ b/more.html
@@ -3,21 +3,13 @@
 <head>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118776663-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-118776663-1');
-</script>
 
   <!-- Basic Page Info
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>dial up store | teah</title>
-  <meta name="description" content="Teah Khadijeh Brands | Design Portfolio">
-  <meta name="author" content="Teah Khadijeh Brands">
+  <title>spurge eats</title>
+  <meta name="description" content="Spurge Eats">
+  <meta name="author" content="Spurge Eats">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -25,14 +17,14 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/teah/tablogo.png" />
+  <link rel="icon" type="image/png" href="images/sexypasta.png.png" />
 
    <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <link rel="preconnect" href="https://fonts.gstatic.com">
 
 <link rel="stylesheet" href="https://use.typekit.net/alw6zrq.css">
-<link rel="stylesheet" href="stylesheets/MyFontsWebfontsKit.css">
+<link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://use.typekit.net/msv1dbc.css">
 
 <!-- ICONS
@@ -85,33 +77,15 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <header class="masthead headerborder">
 
-
-
-                  <!--FILTERS -->
-        <section id="works-filter-panel" class="works-filter-panel">
-          <div class="valign">
-                <div class="works-filter-wrap">
-                    <ul class="works-filter text-center clearfix font2">
-
-                        <li><a id="all" href="#" data-filter="*" class="active"><span>All</span></a></li>
-
-                        <li><a href="#" data-filter=".product"><span>Product</span></a></li>
-                        <!--GREEN -->
-
-                        <li><a href="#" data-filter=".ui"><span>Interface</span></a></li>
-                        <!--BLUE -->
-
-                        <li><a href="#" data-filter=".space"><span>Space</span></a></li>
-                        <!--RED -->
-
-                        <li><a href="#" data-filter=".service"><span>Service</span></a></li>
-                        <!--ORANGE -->
-
-                    </ul>
-                </div>
-          </div>
-        </section> 
-        <!-- -->
+    <div class="valign">
+        <div class="container-fluid">
+            <div class="row">
+                <a href="index.html" class="text-left menupad">eat me</a>
+                <a href="more.html" class="text-center menupad">add me</a>
+                <a href="about.html" class="text-right menupad">read me</a>
+            </div>   
+        </div>
+    </div>
   </header>
 
 
@@ -158,14 +132,12 @@
   <!-- FOOTER
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <footer class="mastfoot footerborder">
+
     <div class="valign">
         <div class="container-fluid">
             <div class="row">
-                <a href="index.html" class="text-left menupad">cook me</a>
-                <a href="more.html" class="text-center menupad">file me</a>
-                <a href="about.html" class="text-right menupad">read me</a>
-              </div>
-            </div>
+                <h2 class="text-center">spurge eats</h2>
+            </div>    
         </div>
     </div>
 
